Ensure very long titles are broken to wrap inside container instead of clipping

--- a/src/components/cards/styles.scss
+++ b/src/components/cards/styles.scss
@@ -251,6 +251,7 @@ div.card {
         size: 1rem;
       }
       margin: 0 0 10px 0;
+      overflow-wrap: break-word;
     }
 
     .content {
